remove console logs and fix start team button on mobile

--- a/v2.0/src/assets/css/extras.css
+++ b/v2.0/src/assets/css/extras.css
@@ -2,7 +2,6 @@
   color: white;
   background: #8dc63f; 
   border-width: 0px !important;
-  padding: 6px 25px; 
   margin: 0 8px;
   height: 100%;
   font-size: 16px;
